<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_tools</name>
  <version>0.1.0</version>
  <description>Tools for saving and visualizing TurtleBot3 trajectories.</description>

  <maintainer email="pratikhandore01@gmail.com">Pratik Handore</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build and run dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>nlohmann_json</depend>
  <depend>yaml-cpp</depend>

  <!-- ROS IDL group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export info -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
